@@ -336,7 +336,8 @@ Executable git-annex
     Build-Depends:
       os-string (>= 2.0.0),
       directory (>= 1.3.8.3),
-      filepath (>= 1.5.2.0)
+      filepath (>= 1.5.2.0),
+      file-io (>= 0.1.3)
     CPP-Options: -DWITH_OSPATH
 
   if (os(windows))
@@ -1134,6 +1135,7 @@ Executable git-annex
     Utility.STM
     Utility.Su
     Utility.SystemDirectory
+    Utility.FileIO
     Utility.Terminal
     Utility.TimeStamp
     Utility.TList
